# Spartan-John-117.github.io

./: .gitignore  README.md  index.html  portfolio.html  projets.html  split_projects.py
Site_Portfolio/: homelab.html  index.html  projet.html
cryptographie-arithmetique/upskill-arithmetique-cryptographie/monorepo/: .gitignore  .gitlab-ci.yml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
cryptographie-arithmetique/upskill-arithmetique-cryptographie/monorepo/apps/arithmatoy/: README.md  pyproject.toml
cryptographie-arithmetique/upskill-arithmetique-cryptographie/monorepo/apps/arithmatoy/scripts/: README.md  vcpkg_install.sh
cryptographie-arithmetique/upskill-arithmetique-cryptographie/monorepo/apps/arithmatoy/src/: arithmatoy.c
cryptographie-arithmetique/upskill-arithmetique-cryptographie/monorepo/apps/arithmatoy/tests/: test_arithmatoy.py
cryptographie-arithmetique/upskill-arithmetique-cryptographie/monorepo/apps/cryptoy/: README.md  pyproject.toml
cryptographie-arithmetique/upskill-arithmetique-cryptographie/monorepo/apps/cryptoy/tests/: test_cryptoy.py
cryptographie-arithmetique/upskill-arithmetique-cryptographie/monorepo/apps/tp-nombres/: README.md  pyproject.toml
cryptographie-arithmetique/upskill-arithmetique-cryptographie/monorepo/apps/tp-nombres/tests/: test_tp_nombres.py
cryptographie-arithmetique/upskill-arithmetique-cryptographie/monorepo/apps/turingtoy/: README.md  pyproject.toml
cryptographie-arithmetique/upskill-arithmetique-cryptographie/monorepo/apps/turingtoy/tests/: conftest.py  test_turing.py
cryptographie-arithmetique/upskill-arithmetique-cryptographie/monorepo/public/: index.html
cryptographie-arithmetique/upskill-arithmetique-cryptographie/monorepo/slides/000-slidev-template/: package.json
cryptographie-arithmetique/upskill-arithmetique-cryptographie/monorepo/slides/001-slides-nombres/: package.json  slides.md
cryptographie-arithmetique/upskill-arithmetique-cryptographie/monorepo/slides/001-slides-nombres/public/: floats.cpp  integers.cpp
cryptographie-arithmetique/upskill-arithmetique-cryptographie/monorepo/slides/001-slides-nombres/styles/: base.css
cryptographie-arithmetique/upskill-arithmetique-cryptographie/monorepo/slides/002-slides-logique/: package.json  slides.md
cryptographie-arithmetique/upskill-arithmetique-cryptographie/monorepo/slides/003-slides-calculabilite/: package.json  slides.md
cryptographie-arithmetique/upskill-arithmetique-cryptographie/monorepo/slides/004-slides-algorithmique/: package.json  slides.md
cryptographie-arithmetique/upskill-arithmetique-cryptographie/monorepo/slides/005-slides-cryptographie-introduction/: package.json  slides.md
cryptographie-arithmetique/upskill-arithmetique-cryptographie/monorepo/slides/006-slides-cryptographie-moderne/: package.json  slides.md
developpement-algorithmie/Upskill_Rust/net_scanner/: .gitignore  Cargo.toml  README.md
developpement-algorithmie/Upskill_Rust/net_scanner/scripts/: check_errors.sh  make_git_bundle.sh
developpement-algorithmie/Upskill_Rust/net_scanner/src/: debug.rs  error.rs  main.rs  packet.rs  scanner.rs
(+1864 files in other folders)
