[package]
name = "net_scanner"
version = "0.1.0"
edition = "2021"
authors = ["John Spartan"]
description = "Raw-socket network scanner in Rust"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
nix = "0.27"
