[project]
name = "arithmatoy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Celeborn2BeAlive", email = "laurent.noel.c2ba@gmail.com" }
]
dependencies = [
    "typer>=0.16.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
arithmatoy = "arithmatoy.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/arithmatoy"]

[tool.rye.scripts]
arithmatoy = "arithmatoy.__main__:app"
