[project]
name = "turingtoy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Celeborn2BeAlive", email = "laurent.noel.c2ba@gmail.com" }
]
dependencies = [
    "deepdiff>=8.5.0",
    "simplejson>=3.20.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/turingtoy"]
